Got basic layering to work, PPT with layered diagram

--- a/layered-config-parser/src/config/settings.dev.ini
+++ b/layered-config-parser/src/config/settings.dev.ini
@@ -1,3 +1,5 @@
 [oil]
-api_key=myapikeyfordev
-endpoint=http://dev.some.url/
+endpoint=http://dev.oilservices.server/
+
+[weather]
+endpoint=http://dev.weatherservices.server/
