--- a/layered-config-parser/src/config/settings.ini
+++ b/layered-config-parser/src/config/settings.ini
@@ -1,2 +1,7 @@
 [oil]
+api_key=${OIL_API_KEY}
 output_folder=${USERPROFILE}\scrapers\oil\${ENVIRONMENT}
+
+[weather]
+api_key=${WEATHER_API_KEY}
+output_folder=${USERPROFILE}\scrapers\weather\${ENVIRONMENT}
