--- a/layered-config-parser/src/config/settings.prod.ini
+++ b/layered-config-parser/src/config/settings.prod.ini
@@ -1,3 +1,6 @@
 [oil]
-api_key=myapikeyforprod
-endpoint=http://prod.some.url/
+endpoint=http://prod.oilservices.server/
+
+[weather]
+endpoint=http://prod.weatherservices.server/
+
