--- a/layered-config-parser/src/config/settings.ini
+++ b/layered-config-parser/src/config/settings.ini
@@ -1,4 +1,5 @@
 [oil]
+api_username= some username for api access
 api_key=${OIL_API_KEY}
 output_folder=${USERPROFILE}\scrapers\oil\${ENVIRONMENT}
 
