--- a/flask-azuread-auth/.vscode/settings.json
+++ b/flask-azuread-auth/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-    "autopep8.args": [
-        ""
+    "python.formatting.provider": "autopep8",
+    "python.linting.pylintArgs": [],
+    "pylint.args": [
+        "--disable=C0116",
+        "--disable=C0114",
+        "--disable=W1203",
+        "--disable=C0415"
     ]
 }
