Got multi-page to work

--- a/flask-azuread-auth/.vscode/settings.json
+++ b/flask-azuread-auth/.vscode/settings.json
@@ -5,6 +5,7 @@
         "--disable=C0116",
         "--disable=C0114",
         "--disable=W1203",
-        "--disable=C0415"
+        "--disable=C0415",
+        "--disable=C0301"
     ]
 }
