display all images

--- a/docker-windows/.azure-devops/main.yml
+++ b/docker-windows/.azure-devops/main.yml
@@ -54,6 +54,10 @@ stages:
                 python-demo:$(Build.BuildId)
                 python-demo:latest
 
+          - script: |
+              docker images
+            displayName: "Display all Docker images"
+
           - task: Docker@2
             displayName: "Run Docker container"
             inputs:
