Updates to readme.md

--- a/docker-windows/.azure-devops/main.yml
+++ b/docker-windows/.azure-devops/main.yml
@@ -46,7 +46,7 @@ stages:
             workingDirectory: "$(workingDirectory)"
 
           - task: PowerShell@2
-            displayName: "Run PowerShell script"
+            displayName: "Dump variables"
             inputs:
               targetType: "inline"
               script: |
