--- a/docker-windows/.azure-devops/python-base-image.yml
+++ b/docker-windows/.azure-devops/python-base-image.yml
@@ -42,9 +42,10 @@ stages:
               command: "buildAndPush"
               dockerfile: "$(workingDirectory)/DockerfilePythonOnly"
               buildContext: "$(workingDirectory)"
-              repository: "$(containerRegistry)/$(repositoryName)"
+              repository: "$(repositoryName)"
               tags: $(imagetag)
               containerRegistry: "$(dockerRegistryServiceConnection)"
+              #repository: "$(containerRegistry)/$(repositoryName)"
 
           - task: Docker@2
             displayName: "List all Docker images"
