Revert to server core

--- a/docker-windows/DockerfilePythonAlreadyInstalled
+++ b/docker-windows/DockerfilePythonAlreadyInstalled
@@ -2,7 +2,10 @@
 #
 #In this Docker file are pulling an image with Python already installed
 #
-FROM python:3.13-windowsservercore
+#FROM mcr.microsoft.com/windows/servercore:ltsc2019
+FROM mcr.microsoft.com/windows/nanoserver:ltsc2019
+#https://hub.docker.com/r/microsoft/windows-nanoserver
+
 
 # Set the working directory in the container
 WORKDIR /app
