updated trigger path

--- a/docker-windows/base-python-image/.azure-pipelines/main.yml
+++ b/docker-windows/base-python-image/.azure-pipelines/main.yml
@@ -6,7 +6,7 @@ trigger:
 
   paths:
     include:
-      - "docker-windows/*"
+      - "docker-windows/base-python-image/*"
 
 pool:
   vmImage: "windows-2019"
