--- a/docker-windows/base-python-image/.azure-pipelines/main.yml
+++ b/docker-windows/base-python-image/.azure-pipelines/main.yml
@@ -52,7 +52,10 @@ stages:
               dockerfile: "$(workingDirectory)/Dockerfile"
               buildContext: "$(workingDirectory)"
               repository: "$(repositoryName)"
-              tags: $(imagetag)
+              tags: | 
+                $(imagetag)
+                ${{ if ne(variables['Build.SourceBranchName'], 'master') }}:
+                  latest              
               containerRegistry: "$(dockerRegistryServiceConnection)"
               #repository: "$(containerRegistry)/$(repositoryName)"
 
