Feature/docker windows restructure (#9)
* Updates to readme

* top level 3 folder + temp

* Rename to main.yml

* updated trigger path

* Updates to readme.md

* Updates to README.MD

* tag latest

* Just latest

* Conditional latest

--- a/docker-windows/base-python-image/.azure-pipelines/main.yml
+++ b/docker-windows/base-python-image/.azure-pipelines/main.yml
@@ -6,14 +6,14 @@ trigger:
 
   paths:
     include:
-      - "docker-windows/*"
+      - "docker-windows/base-python-image/*"
 
 pool:
   vmImage: "windows-2019"
 
 
 variables:
-  workingDirectory: "$(System.DefaultWorkingDirectory)/docker-windows"
+  workingDirectory: "$(System.DefaultWorkingDirectory)/docker-windows/base-python-image"
   imagetag: "$(BuildName)"
   containerRegistry: "mywin001vm.azurecr.io"  # Replace with your registry URL
   repositoryName: "python3.9-baseimage"
@@ -24,8 +24,10 @@ variables:
   PreReleaseBuildName: $(MajorVersion).$(MinorVersion).$(Build.BuildId)-beta
   ${{ if eq(variables['Build.SourceBranchName'], 'master') }}:
     BuildName: "${{ variables.ReleaseBuildName }}"
+    latestTag: "latest"
   ${{ else }}:
     BuildName: "${{ variables.PreReleaseBuildName }}"
+    latestTag: "beta-latest"
 
 name: "${{ variables.BuildName }}"
 
@@ -49,10 +51,12 @@ stages:
             displayName: "Build and push Docker image"
             inputs:
               command: "buildAndPush"
-              dockerfile: "$(workingDirectory)/DockerfilePythonBase"
+              dockerfile: "$(workingDirectory)/Dockerfile"
               buildContext: "$(workingDirectory)"
               repository: "$(repositoryName)"
-              tags: $(imagetag)
+              tags: | 
+                $(imagetag)
+                $(latestTag)
               containerRegistry: "$(dockerRegistryServiceConnection)"
               #repository: "$(containerRegistry)/$(repositoryName)"
 
