--- a/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
+++ b/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
@@ -65,4 +65,4 @@ stages:
                   --file $(workingDirectory)/Dockerfile \
                   $(workingDirectory)
 
-                  --todo pass the build arg , the Dockerfile should know how from where to get the image
+#todo pass the build arg , the Dockerfile should know how from where to get the image
