--- a/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
+++ b/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
@@ -55,14 +55,14 @@ stages:
             displayName: 'ACR Build Image'
             inputs:
               azureSubscription: $(azureSubscription)
-              scriptType: 'bash'
+              scriptType: ps
               scriptLocation: 'inlineScript'
+              workingDirectory: "$(workingDirectory)"
               inlineScript: |
                 az acr build \
                   --registry mywin001vm \
                   --platform windows \
                   --image $(repositoryName):$(imagetag) \
                   --file $(workingDirectory)/Dockerfile \
-                  $(workingDirectory)
 
 #todo pass the build arg , the Dockerfile should know how from where to get the image
