--- a/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
+++ b/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
@@ -58,6 +58,6 @@ stages:
               scriptType: ps
               scriptLocation: 'inlineScript'
               workingDirectory: $(workingDirectory)
-              inlineScript: az acr build --registry mywin001vm --platform windows --image $(repositoryName):$(imagetag) --file Dockerfile
+              inlineScript: az acr build --registry mywin001vm --platform windows --image $(repositoryName):$(imagetag) --file Dockerfile .
 
 #todo pass the build arg , the Dockerfile should know how from where to get the image
