--- a/docker-windows/base-python-image/.azure-pipelines/main.yml
+++ b/docker-windows/base-python-image/.azure-pipelines/main.yml
@@ -11,6 +11,14 @@ trigger:
       - "docker-windows/docs/*"
       - "docker-windows/docs/readme.md"
 
+pr:
+  paths:
+    include:
+      - "docker-windows/base-python-image/*"
+    exclude:
+      - "docker-windows/docs/*"
+      - "docker-windows/docs/readme.md"
+
 pool:
   vmImage: "windows-2019"
 
