--- a/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
+++ b/docker-windows/custom-python-app-acr-build/.azure-pipelines/main.yml
@@ -66,7 +66,7 @@ stages:
               scriptType: ps
               scriptLocation: 'inlineScript'
               workingDirectory: $(workingDirectory)
-              inlineScript: az acr build --registry $(containerRegistry) --platform windows --image $(repositoryName):$(imagetag) --file Dockerfile .
+              inlineScript: az acr build --registry $(containerRegistry) --platform windows --image $(repositoryName):$(imagetag) --build-arg BASE_REGISTRY=$(containerRegistry) --file Dockerfile .
 
 #todo pass the build arg , the Dockerfile should know how from where to get the image
 # build arg to Dockerfile ?
