--- a/docker-windows/custom-python-app-acr-build/Dockerfile
+++ b/docker-windows/custom-python-app-acr-build/Dockerfile
@@ -9,10 +9,16 @@ FROM ${BASE_REGISTRY}/python3.9-baseimage:latest
 WORKDIR /app
 # Copy requirements file
 COPY requirements.txt .
+COPY pytest.ini .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 # Copy the source code
 COPY src/ ./src/
+
+# Run pytest during build
+ENV PYTHONPATH=/app/src;/app;/app/tests
+RUN python -m pytest tests/ -v --tb=short
+
 # Set the working directory to src for execution
 WORKDIR /app/src
 # Command to run the application
