--- a/docker-windows/custom-python-app-acr-build/Dockerfile
+++ b/docker-windows/custom-python-app-acr-build/Dockerfile
@@ -11,7 +11,8 @@ WORKDIR /app
 COPY requirements.txt .
 COPY pytest.ini .
 # Install Python dependencies
-RUN pip install --upgrade pip
+# pip upgrade does not work due to permissions, creating venv might be better
+#RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 # Copy the source code
 COPY src/ ./src/
